# markitdown-gui

./: LICENSE  MarkItDown.spec  README.html  README.md  README_zh.md  README_zh_TW.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
markitdowngui/: __init__.py  build_config.py  main.py
markitdowngui/core/: conversion.py  file_utils.py  input_sources.py  markdown_assets.py  pdf_pipeline.py  settings.py
markitdowngui/ui/: __init__.py  drop_widget.py  help_interface.py  home_interface.py  home_state.py  icons.py  main_window.py  preview_worker.py  settings_interface.py  themes.py
markitdowngui/ui/components/: convert_controls.py  file_panel.py  output_panel.py  preview_panel.py  settings_bar.py  url_input_bar.py
markitdowngui/ui/dialogs/: about.py  format_settings.py  shortcuts.py  update_dialog.py
markitdowngui/utils/: logger.py  translations.py  update_checker.py
tests/: conftest.py  test_build_config.py  test_pyinstaller_smoke.py
tests/core/: test_conversion.py  test_file_utils.py  test_input_sources.py  test_markdown_assets.py  test_pdf_pipeline.py  test_real_pdf_end_to_end.py  test_settings.py
tests/ui/: test_home_interface_options.py  test_home_state.py  test_runtime_home_interface.py  test_runtime_settings_interface.py
tests/utils/: test_translations.py  test_update_checker.py
